--- a/BookStore/src/main/resources/templates/authors.html
+++ b/BookStore/src/main/resources/templates/authors.html
@@ -4,7 +4,7 @@ xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Books-details</title>
+    <title>Books-list</title>
     <link rel="stylesheet" href="/css/background.css">
     <link rel="stylesheet" href="/css/information.css">
     
@@ -31,12 +31,21 @@ xmlns:th="http://www.thymeleaf.org">
         </div>
     </header>
 
-    <main  class="book-details">
-            <h1>Book titel</h1>
-            <a href="#">Author name</a>
-            <img src="/img/first_lie_wins.jpg" alt="">
-            <span>categoryName</span>
-            <p>Description</p>
+    <main class="authors">
+        <h2>Author Name</h2>
+        <div class="authors-info">
+            <div class="about-the-author">
+                <p><strong>About the author</strong> ......</p>
+                </div>
+            <div class="books-by-author">
+                <h3>Books by this Author</h3>
+                <ul>
+                    <li><a href="book-detail.html">Book Title 1</a></li>
+                    <li><a href="book-detail.html">Book Title 2</a></li>
+                    <li><a href="book-detail.html">Book Title 3</a></li>
+                </ul>
+            </div>
+        </div>
     </main>
 
     <footer>
