--- a/BookStore/src/main/resources/templates/books.html
+++ b/BookStore/src/main/resources/templates/books.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,8 +18,7 @@
             <li><a href="#">Authors</a></li>
             <li><a href="#">Categories</a></li>
             <li><a href="#">Profile</a></li>
-            <li><a href="#">Admin Dashboard</a></li>
-            <li><a href="#">Add Book</a></li>
+            <li><a href="#">Admin Board</a></li>
         </ul>
         <ul>
             <li><a href="#">Login</a></li>
