--- a/BookStore/src/main/resources/templates/index.html
+++ b/BookStore/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
-
+ <!DOCTYPE html>
+    <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:th="http://www.thymeleaf.org">
+    
     <head>
         <meta charset="UTF-8">
         <title>Index - E-Book Site</title>
@@ -14,16 +14,15 @@
             <div class="logo">Book store</div>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a th:href="@{/books}">Books</a></li>
+                <li><a href="#">Books</a></li>
                 <li><a href="#">Authors</a></li>
                 <li><a href="#">Categories</a></li>
                 <li><a href="#">Profile</a></li>
-                <li><a href="#">Admin Dashboard</a></li>
-                <li><a href="#">Add Book</a></li>
+                <li><a href="#">Admin Board</a></li>
             </ul>
             <ul>
-                <li><a th:href="@{/login}">Login</a></li>
-                <li><a th:href="@{/register}">Register</a></li>
+                <li><a href="#">Login</a></li>
+                <li><a href="#">Register</a></li>
                 <li><a href="#">Logout</a></li>
             </ul>
             <div class="field-search">
