--- a/BookStore/src/main/resources/templates/profile.html
+++ b/BookStore/src/main/resources/templates/profile.html
@@ -23,6 +23,7 @@ xmlns:th="http://www.thymeleaf.org">
             <li><a href="#">Authors</a></li>
             <li><a href="#">Categories</a></li>
             <li><a href="#">Profile</a></li>
+            <li><a href="#">Shopping Bag</a></li>
             <li><a href="#">Admin Board</a></li>
         </ul>
         <ul>
