--- a/BookStore/src/main/resources/templates/book-detail.html
+++ b/BookStore/src/main/resources/templates/book-detail.html
@@ -18,6 +18,7 @@ xmlns:th="http://www.thymeleaf.org">
             <li><a href="#">Authors</a></li>
             <li><a href="#">Categories</a></li>
             <li><a href="#">Profile</a></li>
+            <li><a href="#">Shopping Bag</a></li>
             <li><a href="#">Admin Board</a></li>
         </ul>
         <ul>
@@ -35,6 +36,7 @@ xmlns:th="http://www.thymeleaf.org">
             <h1>Book titel</h1>
             <a href="#">Author name</a>
             <img src="/img/first_lie_wins.jpg" alt="">
+            <span>price</span>
             <span>categoryName</span>
             <p>Description</p>
     </main>
