--- a/BookStore/src/main/resources/templates/index.html
+++ b/BookStore/src/main/resources/templates/index.html
@@ -18,6 +18,7 @@
                 <li><a href="#">Authors</a></li>
                 <li><a href="#">Categories</a></li>
                 <li><a href="#">Profile</a></li>
+                <li><a href="#">Shopping Bag</a></li>
                 <li><a href="#">Admin Board</a></li>
             </ul>
             <ul>
