login and register

--- a/BookStore/src/main/resources/static/css/styles.css
+++ b/BookStore/src/main/resources/static/css/styles.css
@@ -1,5 +1,5 @@
 html{
-    background-image: url('../img/dark-stars.jpg');
+    background-image: url('../images/dark-stars.jpg');
     width: 100%;
     height: 100vh;
     background-position: center;
