--- a/BookStore/src/main/resources/templates/admin.html
+++ b/BookStore/src/main/resources/templates/admin.html
@@ -37,7 +37,7 @@ xmlns:th="http://www.thymeleaf.org">
     <main class="admin">
         <h2>Welcome, Admin!</h2>
         <div class="container">
-            <div class="text-center"><img src="/img/profile.jpg" width="100" class="rounded-circle"></div>
+            <div class="text-center"><img src="/images/profile.jpg" width="100" class="rounded-circle"></div>
             <div class="text-center">
                 <h5 class="mt-4 mb-0">Full name</h5>
                 <span text="full-name">UI/UX Designer</span>
