--- a/BookStore/src/main/resources/templates/book-detail.html
+++ b/BookStore/src/main/resources/templates/book-detail.html
@@ -35,7 +35,7 @@ xmlns:th="http://www.thymeleaf.org">
     <main  class="book-details">
             <h1>Book titel</h1>
             <a href="#">Author name</a>
-            <img src="/img/first_lie_wins.jpg" alt="">
+            <img src="/images/first_lie_wins.jpg" alt="">
             <span>price</span>
             <span>categoryName</span>
             <p>Description</p>
