--- a/BookStore/src/main/resources/templates/books.html
+++ b/BookStore/src/main/resources/templates/books.html
@@ -37,56 +37,56 @@ xmlns:th="http://www.thymeleaf.org">
         <div class="books-links">
             <div class="books-info">
                 <a href="#" class="img">
-                    <img src="/img/first_lie_wins.jpg" alt="">
+                    <img src="/images/first_lie_wins.jpg" alt="">
                 </a>
                 <a href="#" class="book-name">1 Book-name</a>
                 <span>Author name</span>
             </div>
             <div class="books-info">
                 <a href="#" class="img">
-                    <img src="/img/iron-flame.jpg" alt="">
+                    <img src="/images/iron-flame.jpg" alt="">
                 </a>
                 <a href="#" class="book-name">2Book-name</a>
                 <span>Author name</span>
             </div>
             <div class="books-info">
                 <a href="#" class="img">
-                    <img src="/img/sandwich.jpg" alt="">
+                    <img src="/images/sandwich.jpg" alt="">
                 </a>
                 <a href="#" class="book-name">3Book-name</a>
                 <span>Author name</span>
             </div>
             <div class="books-info">
                 <a href="#" class="img">
-                    <img src="/img/swan-song.webp" alt="">
+                    <img src="/images/swan-song.webp" alt="">
                 </a>
                 <a href="#" class="book-name">4Book-name</a>
                 <span>Author name</span>
             </div>
             <div class="books-info">
                 <a href="#" class="img">
-                    <img src="/img/the-demon-of-unrest.jpg" alt="">
+                    <img src="/images/the-demon-of-unrest.jpg" alt="">
                 </a>
                 <a href="#" class="book-name">5Book-name</a>
                 <span>Author name</span>
             </div>
             <div class="books-info">
                 <a href="#" class="img">
-                    <img src="/img/the-paradise-problem.jpg" alt="">
+                    <img src="/images/the-paradise-problem.jpg" alt="">
                 </a>
                 <a href="#" class="book-name">6Book-name</a>
                 <span>Author name</span>
             </div>
             <div class="books-info">
                 <a href="#" class="img">
-                    <img src="/img/the-teacher.jpg" alt="">
+                    <img src="/images/the-teacher.jpg" alt="">
                 </a>
                 <a href="#" class="book-name">7Book-name</a>
                 <span>Author name</span>
             </div>
             <div class="books-info">
                 <a href="#" class="img">
-                    <img src="/img/this-summer-will-be-different.jpg" alt="">
+                    <img src="/images/this-summer-will-be-different.jpg" alt="">
                 </a>
                 <a href="#" class="book-name">8Book-name</a>
                 <span>Author name</span>
