--- a/BookStore/src/main/resources/templates/categories.html
+++ b/BookStore/src/main/resources/templates/categories.html
@@ -38,7 +38,7 @@ xmlns:th="http://www.thymeleaf.org">
                 <ul class="books">
                     <li>
                         <a href="#" class="img">
-                            <img src="/img/first_lie_wins.jpg" alt="">
+                            <img src="/images/first_lie_wins.jpg" alt="">
                         </a>
                     </li>
                 </ul>
@@ -48,7 +48,7 @@ xmlns:th="http://www.thymeleaf.org">
                 <ul class="books">
                     <li>
                         <a href="#" class="img">
-                            <img src="/img/first_lie_wins.jpg" alt="">
+                            <img src="/images/first_lie_wins.jpg" alt="">
                         </a>
                     </li>
                 </ul>
@@ -58,7 +58,7 @@ xmlns:th="http://www.thymeleaf.org">
                 <ul class="books">
                     <li>
                         <a href="#" class="img">
-                            <img src="/img/first_lie_wins.jpg" alt="">
+                            <img src="/images/first_lie_wins.jpg" alt="">
                         </a>
                     </li>
                 </ul>
@@ -68,7 +68,7 @@ xmlns:th="http://www.thymeleaf.org">
                 <ul class="books">
                     <li>
                         <a href="#" class="img">
-                            <img src="/img/first_lie_wins.jpg" alt="">
+                            <img src="/images/first_lie_wins.jpg" alt="">
                         </a>
                     </li>
                 </ul>
@@ -78,7 +78,7 @@ xmlns:th="http://www.thymeleaf.org">
                 <ul class="books">
                     <li>
                         <a href="#" class="img">
-                            <img src="/img/first_lie_wins.jpg" alt="">
+                            <img src="/images/first_lie_wins.jpg" alt="">
                         </a>
                     </li>
                 </ul>
@@ -88,7 +88,7 @@ xmlns:th="http://www.thymeleaf.org">
                 <ul class="books">
                     <li>
                         <a href="#" class="img">
-                            <img src="/img/first_lie_wins.jpg" alt="">
+                            <img src="/images/first_lie_wins.jpg" alt="">
                         </a>
                     </li>
                 </ul>
@@ -98,7 +98,7 @@ xmlns:th="http://www.thymeleaf.org">
                 <ul class="books">
                     <li>
                         <a href="#" class="img">
-                            <img src="/img/first_lie_wins.jpg" alt="">
+                            <img src="/images/first_lie_wins.jpg" alt="">
                         </a>
                     </li>
                 </ul>
@@ -108,7 +108,7 @@ xmlns:th="http://www.thymeleaf.org">
                 <ul class="books">
                     <li>
                         <a href="#" class="img">
-                            <img src="/img/first_lie_wins.jpg" alt="">
+                            <img src="/images/first_lie_wins.jpg" alt="">
                         </a>
                     </li>
                 </ul>
