--- a/BookStore/src/main/resources/templates/index.html
+++ b/BookStore/src/main/resources/templates/index.html
@@ -33,14 +33,14 @@
         </header>
         <section class="index-section">
             <div class="books-move">
-                <span style="--i:1;"><img src="/img/first_lie_wins.jpg" alt=""></span>
-                <span style="--i:2;"><img src="/img/iron-flame.jpg" alt=""></span>
-                <span style="--i:3;"><img src="/img/sandwich.jpg" alt=""></span>
-                <span style="--i:4;"><img src="/img/swan-song.webp" alt=""></span>
-                <span style="--i:5;"><img src="/img/the-demon-of-unrest.jpg" alt=""></span>
-                <span style="--i:6;"><img src="/img/the-paradise-problem.jpg" alt=""></span>
-                <span style="--i:7;"><img src="/img/the-teacher.jpg" alt=""></span>
-                <span style="--i:8;"><img src="/img/this-summer-will-be-different.jpg" alt=""></span>
+                <span style="--i:1;"><img th:src="@{/images/first_lie_wins.jpg}" alt=""></span>
+                <span style="--i:2;"><img th:src="@{/images/iron-flame.jpg}" alt=""></span>
+                <span style="--i:3;"><img th:src="@{/images/sandwich.jpg}" alt=""></span>
+                <span style="--i:4;"><img th:src="@{/images/swan-song.webp}" alt=""></span>
+                <span style="--i:5;"><img th:src="@{/images/the-demon-of-unrest.jpg}" alt=""></span>
+                <span style="--i:6;"><img th:src="@{/images/the-paradise-problem.jpg}" alt=""></span>
+                <span style="--i:7;"><img th:src="@{/images/the-teacher.jpg}" alt=""></span>
+                <span style="--i:8;"><img th:src="@{/images/this-summer-will-be-different.jpg}" alt=""></span>
             </div>
             <blockquote class="quote">
                 “A truly good book is something as natural, 
