--- a/BookStore/src/main/resources/static/css/loginStyles.css
+++ b/BookStore/src/main/resources/static/css/loginStyles.css
@@ -1,5 +1,5 @@
 html{
-    background-image: url('../img/img2.jpg');
+    background-image: url('../images/img2.jpg');
     width: 100%;
     height: 100vh;
     background-position: center;
