--- a/BookStore/src/main/resources/templates/login.html
+++ b/BookStore/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@ xmlns:th="http://www.thymeleaf.org">
 <body>
     <div class="wrapper">
         <h2>Welcome</h2>
-        <form action="/login" method="POST">
+        <form th:action="@{/users/login}" method="POST">
             <div class="input-field">
                 <label for="email" class="sr-only">Email</label>
                 <input type="email" id="email" name="email" placeholder="Email" required>
