--- a/BookStore/src/main/resources/templates/profile.html
+++ b/BookStore/src/main/resources/templates/profile.html
@@ -39,7 +39,7 @@ xmlns:th="http://www.thymeleaf.org">
 
     <main class="profile">
         <div class="container">
-            <div class="text-center"><img src="/img/profile.jpg" width="100" class="rounded-circle"></div>
+            <div class="text-center"><img src="/images/profile.jpg" width="100" class="rounded-circle"></div>
             <div class="text-center">
                 <h5 class="mt-4 mb-0">Full name</h5>
                 <span text="full-name">UI/UX Designer</span>
