--- a/BookStore/src/main/resources/static/css/background.css
+++ b/BookStore/src/main/resources/static/css/background.css
@@ -29,12 +29,22 @@ ul{
     list-style: none;
 }
 
-li a{
+li a,
+li form,
+li button{
     text-decoration: none;
     color: #fff;
     font-weight: 600;
 }
-
+li button{
+    background: none;
+    border: none;
+    color: inherit;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+    font: inherit;
+}
 a:hover { 
     text-decoration: none; 
     border-bottom: 0.1em solid #fff;
