--- a/BookStore/src/main/resources/templates/fragments/header.html
+++ b/BookStore/src/main/resources/templates/fragments/header.html
@@ -5,14 +5,20 @@
         <li><a th:href="@{/}">Books</a></li>
         <li><a th:href="@{/}"Authors</a></li>
         <li><a th:href="@{/}">Categories</a></li>
-        <li><a th:href="@{/users/profle}">Profile</a></li>
+        <li><a th:href="@{/users/profile}">Profile</a></li>
         <li><a th:href="@{/}">Shopping Bag</a></li>
+        <th:block sec:authorize="isAuthenticated()">
         <li><a th:href="@{/}">Admin Board</a></li>
+        </th:block>
     </ul>
     <ul>
         <li><a th:href="@{/users/login}">Login</a></li>
         <li><a th:href="@{/users/register}">Register</a></li>
-        <li><a th:href="@{/}">Logout</a></li>
+        <li><form
+                th:method="POST"
+                th:action="@{/users/logout}"
+        ><button type="submit">Logout</button>
+        </form></li>
     </ul>
     <div class="field-search">
         <input type="search" placeholder="search" id="search">
