--- a/BookStore/src/main/resources/templates/fragments/header.html
+++ b/BookStore/src/main/resources/templates/fragments/header.html
@@ -7,7 +7,7 @@
         <li><a th:href="@{/}">Categories</a></li>
         <li><a th:href="@{/users/profile}">Profile</a></li>
         <li><a th:href="@{/}">Shopping Bag</a></li>
-        <th:block sec:authorize="isAuthenticated()">
+        <th:block sec:authorize="hasRole('ADMIN')">
         <li><a th:href="@{/}">Admin Board</a></li>
         </th:block>
     </ul>
